# fastapi-mysql-async-boilerplate

./: .env.local  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  DockerfileCelery  README.md  pyproject.toml
app/: __init__.py  conftest.py  main.py
app/core/: celery_conf.py  config.py  db.py  models.py
app/feed/: api.py  crud.py  dependencies.py
app/heroes/: api.py  crud.py  dependencies.py  examples.py  models.py
app/heroes/tests/: tests.py
app/heroes/tests/data/: data.json
app/router/api_v1/: endpoints.py
app/search/: api.py
migrations/: env.py
migrations/versions/: 8cc93f025aff_heroes.py
