[tool.poetry]
name = "heroesapp"
version = "0.1.0"
description = "The project describes an async setup for FastAPI, SQLAlchemy, SQLModel"
authors = ["Etretyakov <etretyakov@kaf65.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
sqlmodel = "^0.0.8"
python-dotenv = "^1.0.0"
pytest = "^7.4.0"
alembic = "^1.11.1"
pytest-asyncio = "^0.21.1"
httpx = "^0.24.1"
uvicorn = "^0.23.1"
asyncmy = "^0.2.8"

[tool.poetry.dev-dependencies]
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
